Added some footer CSS to pages. Next is to properly make pages involving teams and the like (possibly allow multiple block segments for about pages)

--- a/webpages/calendar.html
+++ b/webpages/calendar.html
@@ -17,6 +17,7 @@
 
     <!-- Custom CSS -->
     <link href="css/the-big-picture.css" rel="stylesheet">
+    <link href="/css/footer.css" rel="stylesheet">
 
     <!-- Angular -->
     <script type="text/JavaScript" src="/js/angular.min.js"></script>
