--- a/webpages/item.html
+++ b/webpages/item.html
@@ -16,6 +16,7 @@
 
     <!-- Custom Fonts -->
     <link href="/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="/css/footer.css" rel="stylesheet">
 
     <!-- Custom CSS -->
     <link href="/css/shop-item.css" rel="stylesheet">
