--- a/webpages/checkout.html
+++ b/webpages/checkout.html
@@ -17,6 +17,7 @@
     <!-- Custom CSS -->
     <link href="css/the-big-picture.css" rel="stylesheet">
     <link href="css/padding.css" rel="stylesheet">
+    <link href="/css/footer.css" rel="stylesheet">
     
     <!-- Custom Fonts -->
     <link href="/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
