--- a/webpages/login.html
+++ b/webpages/login.html
@@ -17,6 +17,7 @@
     <!-- Custom CSS -->
     <link href="/css/the-big-picture.css" rel="stylesheet">
     <link href="/css/padding.css" rel="stylesheet">
+    <link href="/css/footer.css" rel="stylesheet">
     <!-- <link href="/css/modern-business.css" rel="stylesheet"> -->
 
     <!-- Custom Fonts -->
