--- a/webpages/thanks.html
+++ b/webpages/thanks.html
@@ -18,6 +18,7 @@
     <link href="/css/the-big-picture.css" rel="stylesheet">
     <link href="/css/padding.css" rel="stylesheet">
     <link href="/css/modern-business.css" rel="stylesheet">
+    <link href="/css/footer.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
     <link href="/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
