--- a/webpages/calendar.html
+++ b/webpages/calendar.html
@@ -4,83 +4,86 @@
 
 <head>
 
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="description" content="">
+	<meta name="author" content="">
 
-    <title>The Big Picture - Start Bootstrap Template</title>
+	<title>The Big Picture - Start Bootstrap Template</title>
 
-    <!-- Bootstrap Core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+	<!-- Bootstrap Core CSS -->
+	<link href="css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- Custom CSS -->
-    <link href="css/the-big-picture.css" rel="stylesheet">
-    <link href="/css/footer.css" rel="stylesheet">
+	<!-- Custom CSS -->
+	<link href="css/the-big-picture.css" rel="stylesheet">
+	<link href="/css/footer.css" rel="stylesheet">
 
-    <!-- Angular -->
-    <script type="text/JavaScript" src="/js/angular.min.js"></script>
-    <script type="text/JavaScript" src="/js/angular-cookies.js"></script>
-    <script type="text/javascript" src="/js/calendarApp.js"></script>
-    <script type="text/javascript" src="/js/headerController.js"></script>
-    <script type="text/javascript" src="/js/looseTemplates.js"></script>
+	<!-- Custom Fonts -->
+	<link href="/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+
+	<!-- Angular -->
+	<script type="text/JavaScript" src="/js/angular.min.js"></script>
+	<script type="text/JavaScript" src="/js/angular-cookies.js"></script>
+	<script type="text/javascript" src="/js/calendarApp.js"></script>
+	<script type="text/javascript" src="/js/headerController.js"></script>
+	<script type="text/javascript" src="/js/looseTemplates.js"></script>
 
 
-    <!-- Base Path -->
-    <base href="/">
+	<!-- Base Path -->
+	<base href="/">
 
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
+	<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+	<!--[if lt IE 9]>
+		<script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+		<script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+	<![endif]-->
 
 </head>
 
 <body ng-app="CalendarApp">
 
-    <!-- Navigation -->
-    <navigation-bar></navigation-bar>
+	<!-- Navigation -->
+	<navigation-bar></navigation-bar>
 
-    <!-- Page Content -->
-    <div class="container">
-        <div class="row">
-            <div class="col-md-6 col-sm-12">
-                <h1>Upcoming Events</h1>
-                <p>Seriously this calendar iframe is hideous maybe this could be a bannar</p>
-            </div>
-        </div>
-        <div attr-class="col-md-12">
-            <div class="panel panel-default">
-                <!-- <div class="panel-heading">
-                    <h3>Upcoming Events</h3>
-                </div> -->
-                <div class="panel-body">
-                    <iframe src="https://calendar.google.com/calendar/embed?src=acmbruins%40gmail.com&ctz=America/Los_Angeles" style="border: 0" width="100%" height="800px" frameborder="0" scrolling="no"></iframe>
-                </div>
-            </div>
-        </div>
+	<!-- Page Content -->
+	<div class="container">
+		<div class="row">
+			<div class="col-md-6 col-sm-12">
+				<h1 class="well">Upcoming Events</h1>
+			</div>
+		</div>
+		<div attr-class="col-md-12">
+			<div class="panel panel-default">
+				<!-- <div class="panel-heading">
+					<h3>Upcoming Events</h3>
+				</div> -->
+				<div class="panel-body">
+					<iframe src="https://calendar.google.com/calendar/embed?src=acmbruins%40gmail.com&ctz=America/Los_Angeles" style="border: 0" width="100%" height="800px" frameborder="0" scrolling="no"></iframe>
+				</div>
+			</div>
+		</div>
 
-        <div class="row"> 
-            <div class="col-lg-12">
-                <hr>
+		<!-- <div class="row"> 
+			<div class="col-lg-12">
+				<hr>
 
-                <footer-and-copyright></footer-and-copyright>
-            </div>
-        </div>
-        
-        <!-- /.row -->
-    </div>
-    <!-- /.container -->
+				<footer-and-copyright></footer-and-copyright>
+			</div>
+		</div> -->
+		
+		<!-- /.row -->
+	</div>
+	<!-- /.container -->
+	
+	<footer-and-copyright></footer-and-copyright>
+	
+	<!-- jQuery -->
+	<script src="/js/jquery.js"></script>
 
-    
-    <!-- jQuery -->
-    <script src="/js/jquery.js"></script>
-
-    <!-- Bootstrap Core JavaScript -->
-    <script src="/js/bootstrap.min.js"></script>
+	<!-- Bootstrap Core JavaScript -->
+	<script src="/js/bootstrap.min.js"></script>
 
 </body>
 
