--- a/webpages/htmltemplates/footer-and-copyright.html
+++ b/webpages/htmltemplates/footer-and-copyright.html
@@ -1,26 +1,28 @@
 <footer>
 	<div class="container">
-		<div class="row col-md-4">
-			<img class="img-responsive" src="/logos/augment-full-logo.png">
+		<div class="row">
+			<div class="col-md-4">
+				<img class="img-responsive" src="/logos/augment-full-logo.png">
+			</div>
 		</div>
 		<div class="row">
-			<div class="col-lg-12">
-				<div class="col-md-6">
-					<div class="row">
-						<a ng-repeat="headerLink in header.headerLinks" ng-href="{{headerLink.href}}" target="_self">
-							<div class="col-xs-3" ng-bind-html="headerLink.title">
+			<div class="col-md-6">
+				<div class="row">
+					<a ng-repeat="headerLink in header.headerLinks" ng-href="{{headerLink.href}}" target="_self">
+						<div class="col-xs-3" ng-bind-html="headerLink.title">
 
-							</div>
-						</a>
-					</div>
+						</div>
+					</a>
 				</div>
-				<div class="col-md-6 pull-right">
-					<div class="col-sm-2">
+			</div>
+			<div class="col-md-6">
+				<div class="row">
+					<div class="col-md-2">
 					</div>
-					<div class="col-sm-5">
+					<div class="col-md-5 col-sm-6">
 						<p><b>Follow us on social media: </b></p>
 					</div>
-					<div class="col-sm-5">
+					<div class="col-md-5 col-sm-6">
 						<div class='col-xs-4'>
 							<!-- Facebook:  -->
 							<a href="https://www.facebook.com/AugmentUCLA/" target="_self">
