--- a/webpages/sponsors.html
+++ b/webpages/sponsors.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" ng-app="SponsorPage" ng-cloak>
 
-<head ng-controller="DescriptionHandler as description">
+<head>
 
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -79,133 +79,68 @@
 	</header>
 
 	<!-- Page Content -->
-	<div class="container">
-
-		<!-- Header Location Icons Section -->
-		<div class="row" ng-controller="DescriptionHandler as description" ng-hide="true">
-			<div class="col-lg-12">
-				<h1 class="page-header">
-					{{description.teamData.header}}
-				</h1>
-			</div>
-			<!-- class="col-md-12" -->
-			<div ng-repeat="block in description.teamData.blocks" ng-attr-class="{{'col-md-' + block.size}}">
-				<div class="panel panel-default">
-					<div class="panel-heading">
-						<h4>{{block.title}}</h4>
-					</div>
-					<div class="panel-body">
-						<div ng-bind-html="block.content"></div>
-						<a ng-hide="{{block.linkText === null}}" ng-href="{{block.linkUrl}}" target="_self" class="btn btn-default">{{block.linkText}}</a>
-					</div>
+	<div class="container" ng-controller="SectionBlockHandler as blockHandler">
+		<div class="row" ng-repeat="sectionBlock in blockHandler.sectionBlocks">
+			<!-- Well Content Section -->
+			<div class="row" ng-show="{{sectionBlock.type == 0}}">
+				<div class="col-lg-12">
+					<h1 class="page-header">
+						{{sectionBlock.mainHeader}}
+					</h1>
 				</div>
-			</div>
-			<!-- <div class="col-md-4">
-				<div class="panel panel-default">
-					<div class="panel-heading">
-						<h4><i class="fa fa-fw fa-gift"></i> Free &amp; Open Source</h4>
-					</div>
-					<div class="panel-body">
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?</p>
-						<a href="#" class="btn btn-default">Learn More</a>
-					</div>
-				</div>
-			</div>
-			<div class="col-md-4">
-				<div class="panel panel-default">
-					<div class="panel-heading">
-						<h4><i class="fa fa-fw fa-compass"></i> Easy to Use</h4>
-					</div>
-					<div class="panel-body">
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?</p>
-						<a href="#" class="btn btn-default">Learn More</a>
-					</div>
-				</div>
-			</div> -->
-		</div>
-		<!-- /.row -->
-
-		<!-- Portfolio Section -->
-		<div class="row" ng-controller='PortfolioHandler as portfolio' ng-hide="{{portfolio.header == null}}">
-			<div class="col-lg-12">
-				<h2 class="page-header">{{portfolio.header}}</h2>
-			</div>
-			<div class="col-md-12" ng-repeat="icon in portfolio.iconData track by $index">
-				<div class="col-md-4">
-					<a ng-href="{{icon.imageLink}}" target="_self">
-						<img class="img-responsive img-portfolio img-hover fillPortfolio" ng-src="{{icon.imageSrc}}" alt="">
-					</a>
-				</div>
-				<div class="col-md-8">
+				<!-- class="col-md-12" -->
+				<div ng-repeat="block in sectionBlock.blocks" ng-attr-class="{{'col-md-' + block.size}}">
 					<div class="panel panel-default">
 						<div class="panel-heading">
-							<h4>
-								<a ng-href="{{icon.imageLink}}" target="_self">
-									{{icon.title}}
-								</a>
-							</h4>
+							<h4>{{block.title}}</h4>
 						</div>
 						<div class="panel-body">
-							<div ng-bind-html="icon.description"></div>
-							<!-- <p>{{icon.description}}</p> -->
-							<div>
-								<div class="col-xs-1" ng-repeat="socialMedia in icon.socialMedia">
-									<a ng-href="{{socialMedia.imageLink}}" target="_self">
-										<i class="fa img-responsive img-hover fa-2x" ng-class="socialMedia.icon">
-										</i>
+							<div ng-bind-html="block.content"></div>
+							<a ng-hide="{{block.linkText === null}}" ng-href="{{block.linkUrl}}" target="_self" class="btn btn-default">{{block.linkText}}</a>
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<!-- Portfolio Section -->
+			<div class="row" ng-show="{{sectionBlock.type == 1}}">
+				<div class="col-lg-12">
+					<h2 class="page-header">{{sectionBlock.portfolioHeader}}</h2>
+				</div>
+				<div class="col-md-12" ng-repeat="icon in sectionBlock.portfolios track by $index">
+					<div class="col-md-4">
+						<a ng-href="{{icon.imageLink}}" target="_self">
+							<img class="img-responsive img-portfolio img-hover fillPortfolio" ng-src="{{icon.imageSrc}}" alt="">
+						</a>
+					</div>
+					<div class="col-md-8">
+						<div class="panel panel-default">
+							<div class="panel-heading">
+								<h4>
+									<a ng-href="{{icon.imageLink}}" target="_self">
+										{{icon.title}}
 									</a>
+								</h4>
+							</div>
+							<div class="panel-body">
+								<div ng-bind-html="icon.description"></div>
+								<!-- <p>{{icon.description}}</p> -->
+								<div>
+									<div class="col-xs-1" ng-repeat="socialMedia in icon.socialMedia">
+										<a ng-href="{{socialMedia.imageLink}}" target="_self">
+											<i class="fa img-responsive img-hover fa-2x" ng-class="socialMedia.icon">
+											</i>
+										</a>
+									</div>
 								</div>
 							</div>
 						</div>
 					</div>
+					<p>
 				</div>
-				<p>
 			</div>
 		</div>
 		<!-- /.row -->
-
-		<!-- Features Section -->
-		<!-- <div class="row">
-			<div class="col-lg-12">
-				<h2 class="page-header">Modern Business Features</h2>
-			</div>
-			<div class="col-md-6">
-				<p>The Modern Business template by Start Bootstrap includes:</p>
-				<ul>
-					<li><strong>Bootstrap v3.2.0</strong>
-					</li>
-					<li>jQuery v1.11.0</li>
-					<li>Font Awesome v4.1.0</li>
-					<li>Working PHP contact form with validation</li>
-					<li>Unstyled page elements for easy customization</li>
-					<li>17 HTML pages</li>
-				</ul>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis, omnis doloremque non cum id reprehenderit, quisquam totam aspernatur tempora minima unde aliquid ea culpa sunt. Reiciendis quia dolorum ducimus unde.</p>
-			</div>
-			<div class="col-md-6">
-				<img class="img-responsive" src="http://placehold.it/700x450" alt="">
-			</div>
-		</div> -->
-		<!-- /.row -->
-
-		<!-- <hr> -->
-
-		<!-- Call to Action Section -->
-		<!-- <div class="well">
-			<div class="row">
-				<div class="col-md-8">
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, expedita, saepe, vero rerum deleniti beatae veniam harum neque nemo praesentium cum alias asperiores commodi.</p>
-				</div>
-				<div class="col-md-4">
-					<a class="btn btn-lg btn-default btn-block" href="#">Call to Action</a>
-				</div>
-			</div>
-		</div> -->
-
-		<hr>
-
-		<!-- Footer -->
-
 	</div>
 	<footer-and-copyright></footer-and-copyright>
 	<!-- /.container -->
