The thing works via css based solution, in which i use flexboxes. I am unsure if I need the padding javascript at all, so I'm removing it.

--- a/webpages/calendar.html
+++ b/webpages/calendar.html
@@ -57,7 +57,7 @@
 		</div>
 		<div class="row">
 			<div class="col-lg-8">
-				<div class="box">
+				<!-- <div class="box"> -->
 					<div class="panel panel-default">
 						<!-- <div class="panel-heading">
 							<h3>Upcoming Events</h3>
@@ -66,31 +66,33 @@
 							<iframe ng-src="{{calendar.calendarData.iframeURL}}" style="border: 0" width="100%" height="800px" frameborder="0" scrolling="no"></iframe>
 						</div>
 					</div>
-				</div>
+				<!-- </div> -->
 			</div>
 			<div class="col-lg-4">
-				<div class="box">
-					<div class="well flexContainer">
-						<h2>Upcoming Events</h2>
-						<hr>
-						<div class="scrollbox">
-							<div class="panel panel-info" ng-repeat="event in calendar.calendarData.events">
-								<div class="panel-heading">
-									<h3 class="panel-title">
-										<b>
-											<a ng-href="{{'/about?id=' + event.aboutPageId}}">
-												{{event.title}}
-											</a>
-										</b>
-									</h3>
-								</div>
-								<div class="panel-body">
-									Panel content
+				<!-- <div class="box"> -->
+					<div class="well">
+						<div class="flexContainer">
+							<h2>Upcoming Events</h2>
+							<hr>
+							<div class="scrollbox">
+								<div class="panel panel-info" ng-repeat="event in calendar.calendarData.events">
+									<div class="panel-heading">
+										<h3 class="panel-title">
+											<b>
+												<a ng-href="{{'/about?id=' + event.aboutPageId}}">
+													{{event.title}}
+												</a>
+											</b>
+										</h3>
+									</div>
+									<div class="panel-body">
+										Panel content
+									</div>
 								</div>
 							</div>
 						</div>
 					</div>
-				</div>
+				<!-- </div> -->
 			</div>
 		</div>
 
@@ -108,7 +110,7 @@
 	<!-- Bootstrap Core JavaScript -->
 	<script src="/js/bootstrap.min.js"></script>
 	<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery.matchHeight/0.7.0/jquery.matchHeight-min.js"></script>
-	<script src="/js/padding.js"></script>
+	<!-- <script src="/js/padding.js"></script> -->
 
 </body>
 
