--- a/webpages/calendar.html
+++ b/webpages/calendar.html
@@ -86,7 +86,8 @@
 										</h3>
 									</div>
 									<div class="panel-body">
-										Panel content
+										<b>{{calendar.calculateDateString(event)}}</b>
+										<div ng-bind-html="event.shortDescription"></div>
 									</div>
 								</div>
 							</div>
